add home screen

--- a/modules/features/login_feature/src/main/res/values/strings.xml
+++ b/modules/features/login_feature/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="log_in">Log in</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
+    <string name="succes">Hello %s</string>
 </resources>
