--- a/modules/features/home_screen_feature/src/main/res/values/strings.xml
+++ b/modules/features/home_screen_feature/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="repair">Repair</string>
     <string name="working">Working</string>
     <string name="pause">Pause</string>
+    <string name="info">Information about equipment</string>
 </resources>
